@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.85 2003/01/29 17:10:51 ukai Exp $ */
+/* $Id: proto.h,v 1.86 2003/01/29 17:38:15 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -226,6 +226,7 @@ extern Buffer *loadBuffer(URLFile *uf, Buffer *newBuf);
 extern Buffer *loadImageBuffer(URLFile *uf, Buffer *newBuf);
 #endif
 extern void saveBuffer(Buffer *buf, FILE * f, int cont);
+extern void saveBufferBody(Buffer *buf, FILE * f, int cont);
 extern Buffer *getshell(char *cmd);
 extern Buffer *getpipe(char *cmd);
 extern Buffer *openPagerBuffer(InputStream stream, Buffer *buf);
